--- a/src/style.css
+++ b/src/style.css
@@ -174,12 +174,12 @@ a img {
 /*---------------------------------------------------------
  Extends (_preboot.scss)
 -------------------------------------------------------- */
-.clear, .site-header, .site-header-main, .header-bar, .site-content, .site-footer, .gallery, .entry-content, .builder-section, .site-content .container, .site-content .infinite-footer-container, #comments-nav, div.sharedaddy {
+.clear, .site-header, .site-header-main, .header-bar, .site-content, .site-footer, .gallery, .entry-content, .builder-section, .site-content .container, .site-content .infinite-footer-container, .site-content .page-template-template-builder-php .entry-content > .twitter-share, .page-template-template-builder-php .site-content .entry-content > .twitter-share, #comments-nav, div.sharedaddy {
 	zoom: 1; }
-.clear:before, .site-header:before, .site-header-main:before, .header-bar:before, .site-content:before, .site-footer:before, .gallery:before, .entry-content:before, .builder-section:before, .site-content .container:before, .site-content .infinite-footer-container:before, #comments-nav:before, div.sharedaddy:before, .clear:after, .site-header:after, .site-header-main:after, .header-bar:after, .site-content:after, .site-footer:after, .gallery:after, .entry-content:after, .builder-section:after, .site-content .container:after, .site-content .infinite-footer-container:after, #comments-nav:after, div.sharedaddy:after {
+.clear:before, .site-header:before, .site-header-main:before, .header-bar:before, .site-content:before, .site-footer:before, .gallery:before, .entry-content:before, .builder-section:before, .site-content .container:before, .site-content .infinite-footer-container:before, .site-content .page-template-template-builder-php .entry-content > .twitter-share:before, .page-template-template-builder-php .site-content .entry-content > .twitter-share:before, #comments-nav:before, div.sharedaddy:before, .clear:after, .site-header:after, .site-header-main:after, .header-bar:after, .site-content:after, .site-footer:after, .gallery:after, .entry-content:after, .builder-section:after, .site-content .container:after, .site-content .infinite-footer-container:after, .site-content .page-template-template-builder-php .entry-content > .twitter-share:after, .page-template-template-builder-php .site-content .entry-content > .twitter-share:after, #comments-nav:after, div.sharedaddy:after {
 	display: table;
 	content: ""; }
-.clear:after, .site-header:after, .site-header-main:after, .header-bar:after, .site-content:after, .site-footer:after, .gallery:after, .entry-content:after, .builder-section:after, .site-content .container:after, .site-content .infinite-footer-container:after, #comments-nav:after, div.sharedaddy:after {
+.clear:after, .site-header:after, .site-header-main:after, .header-bar:after, .site-content:after, .site-footer:after, .gallery:after, .entry-content:after, .builder-section:after, .site-content .container:after, .site-content .infinite-footer-container:after, .site-content .page-template-template-builder-php .entry-content > .twitter-share:after, .page-template-template-builder-php .site-content .entry-content > .twitter-share:after, #comments-nav:after, div.sharedaddy:after {
 	clear: both; }
 
 .break, p, ul, ol, dl, blockquote, h1, h2, h3, h4, h5, h6, pre, table {
@@ -234,7 +234,7 @@ body.boxed .site-wrapper {
 	width: 100%;
 	margin: 0 auto; }
 
-.container, .infinite-footer-container {
+.container, .infinite-footer-container, .page-template-template-builder-php .entry-content > .twitter-share {
 	max-width: 1024px;
 	margin: 0 auto;
 	padding: 0 32px;
@@ -1600,7 +1600,7 @@ iframe[src*="google.com/maps"] {
 	position: relative;
 	z-index: 2; }
 
-.page-template-template-builder-php .site-content > .container, .page-template-template-builder-php .site-content > .infinite-footer-container {
+.page-template-template-builder-php .site-content > .container, .page-template-template-builder-php .site-content > .infinite-footer-container, .page-template-template-builder-php .entry-content.site-content > .twitter-share {
 	width: 100%;
 	max-width: none;
 	padding: 0; }
@@ -1936,7 +1936,7 @@ iframe[src*="google.com/maps"] {
 	#sidebar-right {
 		float: right; } }
 
-.site-content .container, .site-content .infinite-footer-container {
+.site-content .container, .site-content .infinite-footer-container, .site-content .page-template-template-builder-php .entry-content > .twitter-share, .page-template-template-builder-php .site-content .entry-content > .twitter-share {
 	clear: both;
 	padding-bottom: 44px;
 	padding-bottom: 4.4rem; }
@@ -2327,16 +2327,6 @@ div.sharedaddy {
 	display: block; }
 
 /*---------------------------------------------------------
- WooCommerce (_support.scss)
--------------------------------------------------------- */
-.coupon #coupon_code {
-	line-height: 1.5; 
-	width: auto;}
-
-.woocommerce-cart .cart-collaterals .cart_totals table {
-	border: none; }
-
-/*---------------------------------------------------------
  Postmatic (_support.scss)
 -------------------------------------------------------- */
 .widget_prompt_subscribe_widget input {
@@ -2346,3 +2336,16 @@ div.sharedaddy {
 .widget_prompt_subscribe_widget div.unsubscribe.prompt h5 {
 	margin-bottom: 0;
 	text-transform: none; }
+
+/*---------------------------------------------------------
+ Twitter (_support.scss)
+-------------------------------------------------------- */
+/*---------------------------------------------------------
+ WooCommerce (_support.scss)
+-------------------------------------------------------- */
+.coupon #coupon_code {
+	line-height: 1.5; 
+	width: auto;}
+
+.woocommerce-cart .cart-collaterals .cart_totals table {
+	border: none; }
